{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 23,
  "lineage": "a65360b8-443d-c947-1915-4d8f319f11e0",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870140859713:internet-gateway/igw-07efd71e459a910ba",
            "id": "igw-07efd71e459a910ba",
            "owner_id": "870140859713",
            "region": "us-east-1",
            "tags": {
              "Name": "hw-vpc-igw"
            },
            "tags_all": {
              "Name": "hw-vpc-igw"
            },
            "vpc_id": "vpc-09eb9e85b363f313a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07efd71e459a910ba",
            "id": "r-rtb-07b259b82b4ccad6d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-07b259b82b4ccad6d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "870140859713",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-07b259b82b4ccad6d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870140859713:route-table/rtb-07b259b82b4ccad6d",
            "id": "rtb-07b259b82b4ccad6d",
            "owner_id": "870140859713",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "hw-vpc-public-rt"
            },
            "tags_all": {
              "Name": "hw-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09eb9e85b363f313a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "870140859713",
            "id": "rtb-07b259b82b4ccad6d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000752e4dc6a82dd1",
            "region": "us-east-1",
            "route_table_id": "rtb-07b259b82b4ccad6d",
            "subnet_id": "subnet-03178776dc24fb5db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f96df4473a66619",
            "region": "us-east-1",
            "route_table_id": "rtb-07b259b82b4ccad6d",
            "subnet_id": "subnet-0e21abc808a2c32ba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018764a0a8d0e174c",
            "region": "us-east-1",
            "route_table_id": "rtb-07b259b82b4ccad6d",
            "subnet_id": "subnet-00b69244424d6ffce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870140859713:subnet/subnet-089d7748392df5478",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089d7748392df5478",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870140859713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hw-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "hw-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-09eb9e85b363f313a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "870140859713",
            "id": "subnet-089d7748392df5478",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870140859713:subnet/subnet-0aabee41073f5c7a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aabee41073f5c7a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870140859713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hw-vpc-private-subnet-2"
            },
            "tags_all": {
              "Name": "hw-vpc-private-subnet-2"
            },
            "vpc_id": "vpc-09eb9e85b363f313a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "870140859713",
            "id": "subnet-0aabee41073f5c7a3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870140859713:subnet/subnet-0def210294fd33865",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0def210294fd33865",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870140859713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hw-vpc-private-subnet-3"
            },
            "tags_all": {
              "Name": "hw-vpc-private-subnet-3"
            },
            "vpc_id": "vpc-09eb9e85b363f313a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "870140859713",
            "id": "subnet-0def210294fd33865",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870140859713:subnet/subnet-03178776dc24fb5db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03178776dc24fb5db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "870140859713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hw-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "hw-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-09eb9e85b363f313a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "870140859713",
            "id": "subnet-03178776dc24fb5db",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870140859713:subnet/subnet-0e21abc808a2c32ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e21abc808a2c32ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "870140859713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hw-vpc-public-subnet-2"
            },
            "tags_all": {
              "Name": "hw-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-09eb9e85b363f313a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "870140859713",
            "id": "subnet-0e21abc808a2c32ba",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870140859713:subnet/subnet-00b69244424d6ffce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b69244424d6ffce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "870140859713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hw-vpc-public-subnet-3"
            },
            "tags_all": {
              "Name": "hw-vpc-public-subnet-3"
            },
            "vpc_id": "vpc-09eb9e85b363f313a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "870140859713",
            "id": "subnet-00b69244424d6ffce",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870140859713:vpc/vpc-09eb9e85b363f313a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-036795b63f143f1ba",
            "default_route_table_id": "rtb-030f7b79ef1b3cce5",
            "default_security_group_id": "sg-062d485a58edd20db",
            "dhcp_options_id": "dopt-06384ec8672dc1406",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09eb9e85b363f313a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030f7b79ef1b3cce5",
            "owner_id": "870140859713",
            "region": "us-east-1",
            "tags": {
              "Name": "hw-vpc-vpc"
            },
            "tags_all": {
              "Name": "hw-vpc-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "870140859713",
            "id": "vpc-09eb9e85b363f313a",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}